--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						-->
 					</ul>
 					<form class="form-inline mt-2 mt-md-0">
-						<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+						<input class="form-control mr-sm-2" type="text" placeholder="Search tweet id" aria-label="Search tweet id">
 						<button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="return search(this);">Search</button>
 					</form>
 				</div>
