Added ICO information and statistics

--- a/index.html
+++ b/index.html
@@ -165,8 +165,44 @@
 				</nav>
 
 				<main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-					<h1>TweetChain Block Explorer</h1>
+					<h1><a href="https://twitter.com/search?f=tweets&q=%23TwitterCoin" target="_blank">#TwitterCoin</a> distribution has begun!</h1>
+					<section class="row mb-md-5">
+						<div class="card" style="width: 60%; margin-left: auto; margin-right: auto;">
+							<div class="card-body">
+								<h4 class="card-title">ICO Details</h4>
+								<!--<h6 class="card-subtitle mb-2 text-muted">ICO Details</h6>-->
 
+								<table class="table">
+									<tr>
+										<td>ICO Price</td>
+										<td>1 Quoted Tweet on the longest chain = 1 TWIT</td>
+									</tr>
+									<tr>
+										<td>Token Distribution</td>
+										<td>0% Reserve!! 100% community ICO</td>
+									</tr>
+									<tr>
+										<td>Token Supply</td>
+										<td>&infin; Infinity</td>
+									</tr>
+									<tr>
+										<td>Current Circulation</td>
+										<td title="Subject to change at any time"><span id="tokenCirculation">0</span> TWIT*</td>
+									</tr>
+								</table>
+
+								<!--
+								<p class="card-text">
+									TWIT is the future for verifying user engagement on Twitter.
+								</p>
+								-->
+
+								<!--<a href="#" class="card-link">Quote latest tweet</a>-->
+							</div>
+						</div>
+					</section>
+
+					<h2>TweetChain Block Explorer</h2>
 					<section class="row text-center placeholders">
 						<div id="latestBlock"></div>
 						<!--
