Changed 'POS' to 'POT' :)

--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
 								<table class="table">
 									<tr>
 										<td>ICO Price</td>
-										<td>1 Quoted Tweet on the longest chain<hr />1 TWIT + 1 TWIT POS (every block)</td>
+										<td>
+											1 Quoted Tweet on the longest chain<hr />
+											1 TWIT + 1 TWIT POT* (every block)
+											<p class="small text-muted">* proof of tweet</p>
+										</td>
 									</tr>
 									<tr>
 										<td>Token Distribution</td>
