added alert message about UASF softfork

--- a/index.html
+++ b/index.html
@@ -184,6 +184,24 @@
 				</nav>
 
 				<main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+					<div class="alert alert-warning" role="alert">
+						Please bear with us as we prepare for displaying UASF progress activated on at block #100. <a href="https://twitter.com/SatoshiLite/status/930485557444014080" target="_blank">As proposed by @SatoshiLite</a>, please use the following header format and continue the appropriate chain if you support this header format. Strictly,
+
+						<pre><code>
+	##/ #TwitterCoin @otsproofbot
+
+	Your message here
+						</code></pre>
+
+						There must be a blank new line between the header and the message, for example:
+
+						<pre><code>
+	101/ #TwitterCoin @otsproofbot
+
+	Check out this new awesome ICO! TweetChain.info
+						</code></pre>
+					</div>
+
 					<h1><a href="https://twitter.com/search?f=tweets&q=%23TwitterCoin" target="_blank">#TwitterCoin</a> distribution has begun!</h1>
 					<section class="row mb-md-5">
 						<div class="card" style="width: 60%; margin-left: auto; margin-right: auto;">
