Added configuration and default config for the production environment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link href="dashboard.css" rel="stylesheet">
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="config.js"></script>
 		<script src="init.js"></script>
 
 		<style>
