--- a/index.html
+++ b/index.html
@@ -101,16 +101,17 @@
 		<header>
 			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 				<a class="navbar-brand" href="#">TweetChain Block Explorer</a>
+				<a class="navbar-brand" href="https://twitter.com/dafky2000/" target="_blank">by @dafky2000</a>
 				<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
 				<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 					<ul class="navbar-nav mr-auto">
+					<!--
 						<li class="nav-item active">
 							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 						</li>
-						<!--
 						<li class="nav-item">
 							<a class="nav-link" href="#">Settings</a>
 						</li>
@@ -120,7 +121,7 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#">Help</a>
 						</li>
-						-->
+					-->
 					</ul>
 					<form class="form-inline mt-2 mt-md-0">
 						<input class="form-control mr-sm-2" type="text" placeholder="Search tweet id" aria-label="Search tweet id">
