Updated ticker to TWT

--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
 						</li>
 					</ul>
 					-->
-					<h4>TWIT hodlers</h4>
+					<h4>TWT hodlers</h4>
 					<table id="twitHodlers" class="table table-striped">
 						<thead>
 							<td>User</td>
-							<td>TWIT</td>
+							<td>TWT</td>
 						</thead>
 						<tbody></tbody>
 					</table>
@@ -220,7 +220,7 @@ Check out this new awesome ICO! TweetChain.info
 										<td>ICO Price</td>
 										<td>
 											1 Quoted Tweet on the longest chain<hr />
-											1 TWIT + 1 TWIT POT* (every block)
+											1 TWT + 1 TWT POT* (every block)
 											<p class="small text-muted">* proof of tweet</p>
 										</td>
 									</tr>
@@ -234,7 +234,7 @@ Check out this new awesome ICO! TweetChain.info
 									</tr>
 									<tr>
 										<td>Current Circulation</td>
-										<td><span id="tokenCirculation">0</span> TWIT</td>
+										<td><span id="tokenCirculation">0</span> TWT</td>
 									</tr>
 								</table>
 
