--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				width: 100%;
 				height: 100%;
 				opacity: 0.25;
-				position: absolute;
+				position: fixed;
 				left: 0;
 				top: 0;
 				z-index: 1200;
