--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Check out this new awesome ICO! TweetChain.info
 											<th>Block #</th>
 											<th>User</th>
 											<th>Quote</th>
-											<th>Link</th>
+											<th>Links</th>
 										</tr>
 									</thead>
 									<tbody>
