Added notice about otsproofbot archiving blocks from all valid tweet chains

--- a/index.html
+++ b/index.html
@@ -196,18 +196,13 @@
 					</div>
 					-->
 					<div class="alert alert-warning" role="alert">
-						<a href="https://twitter.com/SatoshiLite/status/930485557444014080" target="_blank">UASF notice: As proposed by @SatoshiLite</a>, please use the following header format and continue the appropriate chain if you support the "Strict100" header format. Strictly,
+						<p><b>2017-11-22</b>: In preparation of a successful fork, <a href="https://twitter.com/otsproofbot/" target="_blank">@otsproofbot</a> has started archiving all valid TweetChains.</p>
 
-						<pre><code>
-##/ #TwitterCoin @otsproofbot
+						<p><b>2017-11-14</b>: <a href="https://twitter.com/SatoshiLite/status/930485557444014080" target="_blank">UASF notice: As proposed by @SatoshiLite</a>, please use the following header format and continue the appropriate chain if you support the "Strict100" header format.</p>
 
-Your message here
-						</code></pre>
+						<p>There must be a blank line between the header and the message, for example:</p>
 
-						There must be a blank line between the header and the message, for example:
-
-						<pre><code>
-101/ #TwitterCoin @otsproofbot
+						<pre><code>101/ #TwitterCoin @otsproofbot
 
 Check out this new awesome ICO! TweetChain.info
 						</code></pre>
