Added Genesis block embedded tweet

--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@ Check out this new awesome ICO! TweetChain.info
 					<section class="row mb-md-5">
 						<div class="card" style="width: 60%; margin-left: auto; margin-right: auto;">
 							<div class="card-body">
-								<h4 class="card-title">ICO Details</h4>
+								<h4 class="card-title">"ICO" Details</h4>
 								<!--<h6 class="card-subtitle mb-2 text-muted">ICO Details</h6>-->
+								<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">0/ On the brink of the first Proof of Tweet coin.<br><br>Here&#39;s the genesis block of the TwitterCoin</p>&mdash; Charlie Lee [LTC] (@SatoshiLite) <a href="https://twitter.com/SatoshiLite/status/928712955847262208?ref_src=twsrc%5Etfw">November 9, 2017</a></blockquote>
+								<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 								<table class="table">
 									<tr>
