Updated the alert message for UASF and added more 'air quotes' around "ICO"

--- a/index.html
+++ b/index.html
@@ -199,16 +199,19 @@
 					</div>
 					-->
 					<div class="alert alert-warning" role="alert">
+						<p><b>2017-11-23</b>: UASF successful! To have your block accepted you must use the following format.</p>
+						<p>There must be a blank line between the header and the message, for example:</p>
+						<pre><code>101/ #TwitterCoin @otsproofbot
+
+Check out this new awesome "ICO"! TweetChain.info</code></pre>
+
 						<p><b>2017-11-22</b>: In preparation of a successful fork, <a href="https://twitter.com/otsproofbot/" target="_blank">@otsproofbot</a> has started archiving all valid TweetChains.</p>
 
 						<p><b>2017-11-14</b>: <a href="https://twitter.com/SatoshiLite/status/930485557444014080" target="_blank">UASF notice: As proposed by @SatoshiLite</a>, please use the following header format and continue the appropriate chain if you support the "Strict100" header format.</p>
 
-						<p>There must be a blank line between the header and the message, for example:</p>
-
 						<pre><code>101/ #TwitterCoin @otsproofbot
 
-Check out this new awesome ICO! TweetChain.info
-						</code></pre>
+Check out this new awesome "ICO"! TweetChain.info</code></pre>
 					</div>
 
 					<h1><a href="https://twitter.com/search?f=tweets&q=%23TwitterCoin" target="_blank">#TwitterCoin</a> distribution has begun!</h1>
@@ -222,7 +225,7 @@ Check out this new awesome ICO! TweetChain.info
 
 								<table class="table">
 									<tr>
-										<td>ICO Price</td>
+										<td>"ICO" Price</td>
 										<td>
 											1 Quoted Tweet on the longest chain<hr />
 											1 TWT + 1 TWT POT* (every block)
@@ -231,7 +234,7 @@ Check out this new awesome ICO! TweetChain.info
 									</tr>
 									<tr>
 										<td>Token Distribution</td>
-										<td>0% Reserve!! 100% community ICO</td>
+										<td>0% Reserve!! 100% community "ICO"</td>
 									</tr>
 									<tr>
 										<td>Token Supply</td>
